--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"nodemon app.js\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,8 @@
   },
   "homepage": "https://github.com/Mathispnz/rehea100220#readme",
   "dependencies": {
+    "concurrently": "^5.1.0",
+    "create-react-app": "^3.3.1",
     "express": "^4.17.1",
     "mongoose": "^5.8.11",
     "nodemon": "^2.0.2"
