--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   },
   "homepage": "https://github.com/Mathispnz/rehea100220#readme",
   "dependencies": {
+    "cloudinary": "^1.19.0",
     "concurrently": "^5.1.0",
+    "cors": "^2.8.5",
     "create-react-app": "^3.3.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.11",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "nodemon": "^2.0.2"
   }
 }
